compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case_clause_guards__alternative_patterns.snap
---
source: compiler-core/src/go/tests/case_clause_guards.rs
expression: "pub fn main(xs) {\n  case xs {\n    1 | 2 -> 0\n    _ -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(xs) {
  case xs {
    1 | 2 -> 0
    _ -> 1
  }
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Main(xs gleam_P.Int_t) gleam_P.Int_t {
  if gleam_P.Bool_t(xs.Equal(1)) {
    return 0
  } else if gleam_P.Bool_t(xs.Equal(2)) {
    return 0
  } else {
    return 1
  }
}
