compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case_clause_guards__constant.snap
---
source: compiler-core/src/go/tests/case_clause_guards.rs
expression: "pub fn main(xs) {\n  case xs {\n    #(x) if x == 1 -> x\n    _ -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(xs) {
  case xs {
    #(x) if x == 1 -> x
    _ -> 0
  }
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Main(xs gleam_P.Tuple1_t[gleam_P.Int_t]) gleam_P.Int_t {
  if gleam_P.Bool_t(xs.P_0.Equal(1)) {
    var x gleam_P.Int_t = xs.P_0
    _ = x
    return x
  } else {
    return 0
  }
}
