compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case_clause_guards__module_access_aliased.snap
---
source: compiler-core/src/go/tests/case_clause_guards.rs
expression: "\n          import hero/submodule as myhero\n          pub fn main() {\n            let name = \"Tony Stark\"\n            case name {\n              n if n == myhero.ironman.name -> True\n              _ -> False\n            }\n          }\n        "
snapshot_kind: text
---
----- SOURCE CODE

          import hero/submodule as myhero
          pub fn main() {
            let name = "Tony Stark"
            case name {
              n if n == myhero.ironman.name -> True
              _ -> False
            }
          }
        

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
  myhero_P "example.com/todo/package/hero/submodule"
)

const _ = gleam_P.Use_Import
const _ = myhero_P.Use_Import
const Use_Import byte = 0

func Main() gleam_P.Bool_t {
  var name gleam_P.String_t = "Tony Stark"
  _ = name
  if gleam_P.Bool_t(name.Equal(myhero_P.Ironman.Name_f())) {
    var n gleam_P.String_t = name
    _ = n
    return true
  } else {
    return false
  }
}
